#pragma once

class Dispenser {
private:
    bool ready;
    
public:
    Dispenser();
    void dispenseCoffee();
};